# evm-wallet

./: Cargo.toml  README.md  add_config.json  clippy.toml  rustfmt.toml
json/: add_config.json  chain_balance.json  send_tx.json
src/: blockchain.rs  config.rs  main.rs  routes.rs  types.rs
src/blockchain/: balance.rs  sign.rs
src/routes/: blockchain.rs  config.rs  transaction.rs
toml/: config.toml
